@@ -1,6 +1,7 @@
 0.21
  - Add Mo::utils::CSS to SEE ALSO section in doc.
  - Fix test for check_array_object().
+ - Improve error check for check_array_object().
  - Move code for check of objec to helper.
  - Update copyright years.
 
